2015-04-28 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Increment progress by te current batch size, do not set an absolute value.

2015-04-24 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	QueryIdentify: split query array in chunks, to limit maximum memory consumption. The batch size is fixed for now.

2015-04-23 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_delete)
	Stop if the associated progress monitor tells to.

	* DBSoapCSV.m
	Query: if interrupted, do not set progress to 100% and set the status to interrupted.


2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_queryIdentify)
	Stop if the associated progress monitor tells so.

2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Instantiate a private service class for create, query, indentify, etc. allowing parallel use.

2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (login:)
	Protect login with lock and busy count

2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Catch exceptions in all locked methods and unlock and decrease busy count.

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Service convenience method, session details accessors.

	* DBSoapCSV.m (query:)
	Instantiate a private GWSService

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBProgressProtocol.h
	Methods for telling the associate process to stop.

	* DBSoapCSV.m (query:)
	Interrupt if the progress monitor says so.

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Provide isBusy to determine if any of the queries are running, protect all public APIs with a lock and call the equivalent internal unprotected ones.

2015-01-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (identifyObjectById) Use keyPrefix accessor, do not
	compare against nil objects.

2015-01-20 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (queryIdentify)
	Throw exception instead of just logging if batch size is specified win an incompatible query.

2014-10-10 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m